--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -32,6 +32,15 @@
 					<a class="dropdown-item" href="#">Something else here</a> -->
 				</div>
 			</li>
+			<li class="nav-item dropdown">
+				<a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Modelos</a>
+				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+					<a class="dropdown-item" th:href="@{/modelos}">Lista de Modelos</a>
+					<a class="dropdown-item" th:href="@{/modelos/novo}">Cadastro de Modelos</a>
+					<!-- <div class="dropdown-divider"></div>
+					<a class="dropdown-item" href="#">Something else here</a> -->
+				</div>
+			</li>
 			<!-- <li class="nav-item">
 				<a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
 			</li> -->
