--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,10 +24,11 @@
 <body class="jumbotron">
 		<div th:replace="fragments/header :: header" />
 		
-		<div class="container">
+		<div class="container-fluid container-lg">
 		
 		</div>
 		
+		<div th:replace="fragments/footer :: footer"/>
 	</div>
 </body>
 </html>
