implementado as views Motorista e Carro e cadastro de Locações

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,6 +1,6 @@
 <header id="header" class="">
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-	<a class="navbar-brand" href="/">CarRental</a>
+	<a class="navbar-brand" href="/"><h3>CarRental</h3></a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
 	</button>
@@ -39,6 +39,25 @@
 					<a class="dropdown-item" th:href="@{/modelos/novo}">Cadastro de Modelos</a>
 					<!-- <div class="dropdown-divider"></div>
 					<a class="dropdown-item" href="#">Something else here</a> -->
+				</div>
+			</li>
+			<li class="nav-item dropdown">
+				<a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Carros</a>
+				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+					<a class="dropdown-item" th:href="@{/carros}">Lista de Carros</a>
+					<a class="dropdown-item" th:href="@{/carros/novo}">Cadastro de Carros</a>
+					<!-- <div class="dropdown-divider"></div>
+					<a class="dropdown-item" href="#">Something else here</a> -->
+				</div>
+			</li>
+			<li class="nav-item dropdown">
+				<a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true"
+					aria-expanded="false">Locações</a>
+				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+					<a class="dropdown-item" th:href="@{/locacoes}">Lista de Locações</a>
+					<a class="dropdown-item" th:href="@{/locacoes/novo}">Cadastro de Locações</a>
+					<!-- <div class="dropdown-divider"></div>
+								<a class="dropdown-item" href="#">Something else here</a> -->
 				</div>
 			</li>
 			<!-- <li class="nav-item">
