--- a/src/main/resources/templates/locacao-lista.html
+++ b/src/main/resources/templates/locacao-lista.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Cadastro de Modelos</title>
+	<title>Cadastro de Locações</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
 		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -23,7 +23,7 @@
 
 	<div class="container">
 		<div class="center" align="center">
-			<h1 class="display-4">Lista de Modelos</h1>
+			<h1 class="display-4">Lista de Locações</h1>
 		</div>
 
 		<div>
@@ -31,32 +31,34 @@
 				<thead class="thead-dark">
 					<tr align="center">
 						<th scope="col">Id</th>
-						<th scope="col">Descrição</th>
-						<th scope="col">Categoria</th>
-						<th scope="col">Fabricante</th>
+						<th scope="col">R$ Total</th>
+						<th scope="col">Data de Locação</th>
+						<th scope="col">Data de Devolução</th>
+						<th scope="col">Carro</th>
+						<th scope="col">Motorista</th>
 						<th scope="col">Ação</th>
 					</tr>
 				</thead>
 				<tbody>
-					<tr th:each="modelo : ${modelos}">
-						<td align="center" th:text="${modelo.id}"></td>
-						<td th:text="${modelo.descricao}"></td>
-						<td align="center" th:text="${modelo.categoria.descricao}"></td>
-						<td align="center" th:text="${modelo.fabricante.nome}"></td>
+					<tr th:each="locacao : ${locacoes}">
+						<td align="center" th:text="${locacao.id}"></td>
+						<td align="right" th:text="${#numbers.formatDecimal(locacao.valorTotal,0,'POINT',2,'COMMA')}"></td>
+						<td align="center" th:text="${#temporals.format(locacao.dataDeLocacao,'dd/MM/yyyy')}"></td>
+						<td align="center" th:text="${#temporals.format(locacao.dataDeDevolucao,'dd/MM/yyyy')}"></td>
+						<td align="center" th:text="${locacao.carro.modelo.descricao}"></td>
+						<td align="center" th:text="${locacao.motorista.nome}"></td>
 						<td align="center"><a class="btn btn-primary btn-sm"
-								th:href="@{modelos/editar/{id}(id=${modelo.id})}">Editar</a>
+							th:href="@{locacoes/editar/{id}(id=${locacao.id})}">Editar</a>
 							<a class="btn btn-danger btn-sm"
-								th:href="@{modelos/excluir/{id}(id=${modelo.id})}">Excluir</a>
+							th:href="@{locacoes/excluir/{id}(id=${locacao.id})}">Excluir</a>
 						</td>
 					</tr>
 				</tbody>
 			</table>
 		</div>
 	</div>
-
 	<div class="footer mt-auto py-3" align="center">
 		<div class="container" th:replace="fragments/footer :: footer" />
 	</div>
 </body>
-
 </html>
