--- a/src/main/resources/templates/carro-cadastro.html
+++ b/src/main/resources/templates/carro-cadastro.html
@@ -20,29 +20,19 @@
 	crossorigin="anonymous"></script>
 </head>
 
-<body class="jumbotron">
+<body class="">
 
 	<div th:replace="fragments/header :: header" />
 
 	<div class="container">
-		<h1 class="form-group" align="center">Cadastro de Carros</h1>
+		<h1 class="display-4" align="center">Cadastro de Carros</h1>
 
 		<div>
 			<form action="/carros" method="POST" th:object="${carro}">
 
-				<!-- Message Error -->
-				<div th:if="${#fields.hasAnyErrors()}">
-					<div th:each="erros : ${#fields.detailedErrors()}"
-						class="alert alert-danger">
-						<span th:text="${erros.message}"></span>
-					</div>
-				</div>
+				<div th:replace="fragments/alert-error :: div" />
 
-				<!-- Message Success -->
-				<div th:if="${!#strings.isEmpty(mensagem)}"
-					class="alert alert-success">
-					<span th:text="${mensagem}"></span>
-				</div>
+				<div th:replace="fragments/alert-sucsses :: div" />
 
 				<input type="hidden" th:field="*{id}" />
 				<div class="form-group">
@@ -68,8 +58,8 @@
 			</form>
 		</div>
 	</div>
-	<div class="footer">
-		<div th:replace="fragments/footer :: footer"/>
+	<div class="footer mt-auto py-3" align="center">
+		<div class="container" th:replace="fragments/footer :: footer" />
 	</div>
 </body>
 </html>
