--- a/src/main/resources/templates/locacao-cadastro.html
+++ b/src/main/resources/templates/locacao-cadastro.html
@@ -17,61 +17,58 @@
         crossorigin="anonymous"></script>
 </head>
 
-<body class="jumbotron">
+<body class="">
 
     <div th:replace="fragments/header :: header" />
 
     <div class="container">
-        <h1 class="form-group" align="center">Cadastro de Locações</h1>
+        <h1 class="display-4" align="center">Cadastro de Locações</h1>
 
         <div>
             <form action="/locacoes" method="POST" th:object="${locacao}">
 
-                <!-- Message Error -->
-                <div th:if="${#fields.hasAnyErrors()}">
-					<div th:each="erros : ${#fields.detailedErrors()}"
-						class="alert alert-danger">
-						<span th:text="${erros.message}"></span>
-					</div>
-				</div>
+                <div th:replace="fragments/alert-error :: div" />
 
-				<!-- Message Success -->
-				<div th:if="${!#strings.isEmpty(mensagem)}"
-					class="alert alert-success">
-					<span th:text="${mensagem}"></span>
-				</div>
+                <div th:replace="fragments/alert-sucsses :: div" />
 
-				<input type="hidden" th:field="*{id}" />
-				<div class="form-group">
-					<label for="valorTotal">Valor Total:</label> 
-					<input id="valorTotal" type="text" min="0.0" max="100000.0" step="0.01" th:field="*{valorTotal}" class="form-control form-control-sm" />
+                <input type="hidden" th:field="*{id}" />
+                <div class="form-group">
+                    <label for="valorTotal">Valor Total:</label>
+                    <input id="valorTotal" type="text" min="0.0" max="100000.0" step="0.01" th:field="*{valorTotal}"
+                        class="form-control form-control-sm" />
 
-					<label for="dataDeLocacao">Data de Locação:</label> 
-					<input id="dataDeLocacao" type="date" th:field="*{dataDeLocacao}" class="form-control form-control-sm" />
+                    <label for="dataDeLocacao">Data de Locação:</label>
+                    <input id="dataDeLocacao" type="date" th:field="*{dataDeLocacao}"
+                        class="form-control form-control-sm col-md-2" />
 
-					<label for="dataDeDevolucao">Data de Devolução:</label> 
-					<input id="dataDeDevolucao" type="date" th:field="*{dataDeDevolucao}" class="form-control form-control-sm" />
-					
-                    <label for="carro">Carro:</label> 
+                    <label for="dataDeDevolucao">Data de Devolução:</label>
+                    <input id="dataDeDevolucao" type="date" th:field="*{dataDeDevolucao}"
+                        class="form-control form-control-sm col-md-2" />
+
+                    <label for="carro">Carro:</label>
                     <div>
-                        <select name="carro"
-                            id="carro" th:field="*{carro}" class="form-control form-control-sm col-md-2">
-                            <option th:each="carro : ${listarTodosCarros}" th:text="${carro.modelo.descricao}" th:value="${carro.id}"></option>
+                        <select name="carro" id="carro" th:field="*{carro}"
+                            class="form-control form-control-sm col-md-2">
+                            <option th:each="carro : ${listarTodosCarros}" th:text="${carro.modelo.descricao}"
+                                th:value="${carro.id}"></option>
                         </select>
                     </div>
                     <label for="motorista">Motorista:</label>
-                    <select name="motorista" id="motorista" th:field="*{motorista}" class="form-control form-control-sm col-md-3">
-                        <option th:each="motorista : ${listarTodosMotoristas}" th:text="${motorista.nome}" th:value="${motorista.id}"></option>
+                    <select name="motorista" id="motorista" th:field="*{motorista}"
+                        class="form-control form-control-sm col-md-3">
+                        <option th:each="motorista : ${listarTodosMotoristas}" th:text="${motorista.nome}"
+                            th:value="${motorista.id}"></option>
                     </select>
-				</div>
+                </div>
 
 
-				<button type="submit" class="btn btn-primary">Salvar</button>
-			</form>
-		</div>
-	</div>
-	<div class="footer">
-		<div th:replace="fragments/footer :: footer"/>
-	</div>
+                <button type="submit" class="btn btn-primary">Salvar</button>
+            </form>
+        </div>
+    </div>
+    <div class="footer mt-auto py-3" align="center">
+        <div class="container" th:replace="fragments/footer :: footer" />
+    </div>
 </body>
+
 </html>
