--- a/src/main/resources/templates/modelo-cadastro.html
+++ b/src/main/resources/templates/modelo-cadastro.html
@@ -1,67 +1,54 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
-<meta charset="UTF-8">
-<title>Cadastro de Modelos</title>
-<link rel="stylesheet"
-	href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-	integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-	crossorigin="anonymous">
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-	integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-	crossorigin="anonymous"></script>
-<script
-	src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-	integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-	crossorigin="anonymous"></script>
-<script
-	src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-	integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-	crossorigin="anonymous"></script>
+	<meta charset="UTF-8">
+	<title>Cadastro de Modelos</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+		crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+		integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+		crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+		crossorigin="anonymous"></script>
 </head>
 
-<body class="jumbotron">
+<body class="">
 
 	<div th:replace="fragments/header :: header" />
 
 	<div class="container">
-		<h1 class="form-group" align="center">Cadastro de Modelos</h1>
+		<h1 class="display-4" align="center">Cadastro de Modelos</h1>
 
 		<div>
 			<form action="/modelos" method="POST" th:object="${modelo}">
 
-				<!-- Message Error -->
-				<div th:if="${#fields.hasAnyErrors()}">
-					<div th:each="erros : ${#fields.detailedErrors()}"
-						class="alert alert-danger">
-						<span th:text="${erros.message}"></span>
-					</div>
-				</div>
+				<div th:replace="fragments/alert-error :: div" />
 
-				<!-- Message Success -->
-				<div th:if="${!#strings.isEmpty(mensagem)}"
-					class="alert alert-success">
-					<span th:text="${mensagem}"></span>
-				</div>
+				<div th:replace="fragments/alert-sucsses :: div" />
 
 				<input type="hidden" th:field="*{id}" />
 				<div class="form-group">
-					<label for="descricao">Descrição:</label> 
+					<label for="descricao">Descrição:</label>
 					<input id="descricao" type="text" th:field="*{descricao}" class="form-control form-control-sm" />
-					
-					<label for="categoria">Categoria:</label> 
-					<select name="categoria"
-						id="categoria" th:field="*{categoria}" class="form-control form-control-sm col-md-2">
-						<option th:each="categoria : ${listarTodasCategorias}"
-							th:text="${categoria.descricao}" th:value="${categoria}">
+
+					<label for="categoria">Categoria:</label>
+					<select name="categoria" id="categoria" th:field="*{categoria}"
+						class="form-control form-control-sm col-md-2">
+						<option th:each="categoria : ${listarTodasCategorias}" th:text="${categoria.descricao}"
+							th:value="${categoria}">
 						</option>
 					</select>
-					
-					<label for="fabricante">Fabricante:</label> 
-					<select name="fabricante"
-						id="fabricante" th:field="*{fabricante}" class="form-control form-control-sm col-md-2">
-						<option th:each="fabricante : ${listarTodosFabricantes}"
-							th:text="${fabricante.nome}" th:value="${fabricante.id}"></option>
+
+					<label for="fabricante">Fabricante:</label>
+					<select name="fabricante" id="fabricante" th:field="*{fabricante}"
+						class="form-control form-control-sm col-md-2">
+						<option th:each="fabricante : ${listarTodosFabricantes}" th:text="${fabricante.nome}"
+							th:value="${fabricante.id}"></option>
 					</select>
 				</div>
 
@@ -70,8 +57,9 @@
 			</form>
 		</div>
 	</div>
-	<div class="footer">
-		<div th:replace="fragments/footer :: footer"/>
+	<div class="footer mt-auto py-3" align="center">
+		<div class="container" th:replace="fragments/footer :: footer" />
 	</div>
 </body>
+
 </html>
