--- a/src/main/resources/templates/motorista-lista.html
+++ b/src/main/resources/templates/motorista-lista.html
@@ -1,63 +1,68 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" class="h-100">
+
 <head>
-<meta charset="UTF-8">
-<title>Cadastro de Motorista</title>
-<link rel="stylesheet"
-	href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-	integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-	crossorigin="anonymous">
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-	integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-	crossorigin="anonymous"></script>
-<script
-	src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-	integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-	crossorigin="anonymous"></script>
-<script
-	src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-	integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-	crossorigin="anonymous"></script>
+	<meta charset="UTF-8">
+	<title>Cadastro de Motorista</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+		crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+		integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+		crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+		crossorigin="anonymous"></script>
 </head>
-<body class="">
 
-	<div th:replace="fragments/header :: header" />
+<body class="d-flex flex-column h-100">
 
-	<div class="container">
-		<div class="center" align="center">
-			<h1 class="display-4">Lista de Motorista</h1>
+	<header>
+		<div th:replace="fragments/header :: header" />
+	</header>
+
+	<main>
+		<div class="container">
+			<div class="center" align="center">
+				<h1 class="display-4">Lista de Motorista</h1>
+			</div>
+
+			<div>
+				<table class="table table-hover table-bordered table-sm">
+					<thead class="thead-dark">
+						<tr align="center">
+							<th scope="col">Id</th>
+							<th scope="col">Nome</th>
+							<th scope="col">Sexo</th>
+							<th scope="col">CPF</th>
+							<th scope="col">CNH</th>
+							<th scope="col">Ação</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr th:each="motorista : ${motoristas}">
+							<td align="center" th:text="${motorista.id}"></td>
+							<td th:text="${motorista.nome}"></td>
+							<td align="center" th:text="${motorista.sexo.descricao}"></td>
+							<td align="center" th:text="${motorista.cpf}"></td>
+							<td align="center" th:text="${motorista.cnh}"></td>
+							<td align="center">
+								<a class="btn btn-primary btn-sm"
+									th:href="@{motoristas/editar/{id}(id=${motorista.id})}">Editar</a>
+								<a class="btn btn-danger btn-sm"
+									th:href="@{motoristas/excluir/{id}(id=${motorista.id})}">Excluir</a>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
 		</div>
-
-		<div>
-			<table class="table table-hover table-bordered table-sm">
-				<thead class="thead-dark">
-					<tr align="center">
-						<th scope="col">Id</th>
-						<th scope="col">Nome</th>
-						<th scope="col">Sexo</th>
-						<th scope="col">CPF</th>
-						<th scope="col">CNH</th>
-						<th scope="col">Ação</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr th:each="motorista : ${motoristas}">
-						<td align="center" th:text="${motorista.id}"></td>
-						<td th:text="${motorista.nome}"></td>
-						<td align="center" th:text="${motorista.sexo.descricao}"></td>
-						<td align="center" th:text="${motorista.cpf}"></td>
-						<td align="center" th:text="${motorista.cnh}"></td>
-						<td align="center">
-							<a class="btn btn-primary btn-sm" th:href="@{motoristas/editar/{id}(id=${motorista.id})}">Editar</a>
-							<a class="btn btn-danger btn-sm" th:href="@{motoristas/excluir/{id}(id=${motorista.id})}">Excluir</a>
-						</td>
-					</tr>
-				</tbody>
-			</table>
-		</div>
-	</div>
+	</main>
 	<div class="footer mt-auto py-3" align="center">
 		<div class="container" th:replace="fragments/footer :: footer" />
 	</div>
 </body>
+
 </html>
