--- a/src/main/resources/templates/carro-cadastro.html
+++ b/src/main/resources/templates/carro-cadastro.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" class="h-100">
 <head>
 <meta charset="UTF-8">
 <title>Cadastro de Carros</title>
@@ -20,44 +20,48 @@
 	crossorigin="anonymous"></script>
 </head>
 
-<body class="">
+<body class="d-flex flex-column h-100">
 
-	<div th:replace="fragments/header :: header" />
-
-	<div class="container">
-		<h1 class="display-4" align="center">Cadastro de Carros</h1>
-
-		<div>
-			<form action="/carros" method="POST" th:object="${carro}">
-
-				<div th:replace="fragments/alert-error :: div" />
-
-				<div th:replace="fragments/alert-sucsses :: div" />
-
-				<input type="hidden" th:field="*{id}" />
-				<div class="form-group">
-					<label for="placa">Placa:</label> 
-					<input id="placa" type="text" th:field="*{placa}" class="form-control form-control-sm" />
-
-					<label for="chassi">Chassi:</label> 
-					<input id="chassi" type="text" th:field="*{chassi}" class="form-control form-control-sm" />
-
-					<label for="valorDaDiaria">Valor da Diária:</label> 
-					<input id="valorDaDiaria" type="text" min="0.0" max="100000.0" step="0.01" th:field="*{valorDaDiaria}" class="form-control form-control-sm" />
-					
-					<label for="modelo">Modelo:</label> 
-					<select name="modelo"
-						id="modelo" th:field="*{modelo}" class="form-control form-control-sm col-md-2">
-						<option th:each="modelo : ${listarTodosModelos}"
-							th:text="${modelo.descricao}" th:value="${modelo.id}"></option>
-					</select>
-				</div>
-
-
-				<button type="submit" class="btn btn-primary">Salvar</button>
-			</form>
-		</div>
+	<div>
+		<div th:replace="fragments/header :: header" class="mt-auto"/>
 	</div>
+
+	<main>
+		<div class="container">
+			<h1 class="display-4" align="center">Cadastro de Carros</h1>
+			
+			<div>
+				<form action="/carros" method="POST" th:object="${carro}">
+	
+					<div th:replace="fragments/alert-error :: div" />
+	
+					<div th:replace="fragments/alert-sucsses :: div" />
+	
+					<input type="hidden" th:field="*{id}" />
+					<div class="form-group">
+						<label for="placa">Placa:</label> 
+						<input id="placa" type="text" th:field="*{placa}" class="form-control form-control-sm" maxlength="8" minlength="8" placeholder="ABC-1234"/>
+
+						<label for="chassi">Chassi:</label> 
+						<input id="chassi" type="number" th:field="*{chassi}" class="form-control form-control-sm" maxlength="15" />
+	
+						<label for="valorDaDiaria">Valor da Diária:</label> 
+						<input id="valorDaDiaria" type="text" min="0.0" max="100000.0" step="0.01" th:field="*{valorDaDiaria}" class="form-control form-control-sm" placeholder="50,99"/>
+						
+						<label for="modelo">Modelo:</label> 
+						<select name="modelo"
+							id="modelo" th:field="*{modelo}" class="form-control form-control-sm col-md-2">
+							<option th:each="modelo : ${listarTodosModelos}"
+								th:text="${modelo.descricao}" th:value="${modelo.id}"></option>
+						</select>
+					</div>
+	
+	
+					<button type="submit" class="btn btn-primary">Salvar</button>
+				</form>
+			</div>
+		</div>
+	</main>
 	<div class="footer mt-auto py-3" align="center">
 		<div class="container" th:replace="fragments/footer :: footer" />
 	</div>
