--- a/src/main/resources/templates/carro-lista.html
+++ b/src/main/resources/templates/carro-lista.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" class="h-100">
 
 <head>
     <meta charset="UTF-8">
@@ -17,9 +17,11 @@
         crossorigin="anonymous"></script>
 </head>
 
-<body class="">
+<body class="d-flex flex-column h-100">
 
-    <div th:replace="fragments/header :: header" />
+    <header>
+        <div th:replace="fragments/header :: header" class="mt-auto"/>
+    </header>
 
     <div class="container">
         <div class="center" align="center">
@@ -30,12 +32,12 @@
             <table class="table table-hover table-bordered table-sm">
                 <thead class="thead-dark">
                     <tr align="center">
-                        <th scope="col">Id</th>
-                        <th scope="col">Placa</th>
-                        <th scope="col">Chassi</th>
-                        <th scope="col">R$/Diária</th>
-                        <th scope="col">Modelo</th>
-                        <th scope="col">Ação</th>
+                        <th>Id</th>
+                        <th>Placa</th>
+                        <th>Chassi</th>
+                        <th>R$/Diária</th>
+                        <th>Modelo</th>
+                        <th>Ação</th>
                     </tr>
                 </thead>
                 <tbody>
