--- a/src/main/resources/templates/locacao-lista.html
+++ b/src/main/resources/templates/locacao-lista.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" class="h-100">
 
 <head>
 	<meta charset="UTF-8">
@@ -17,46 +17,50 @@
 		crossorigin="anonymous"></script>
 </head>
 
-<body class="">
+<body class="d-flex flex-column h-100">
 
-	<div th:replace="fragments/header :: header" />
+	<header>
+		<div th:replace="fragments/header :: header" class="mt-auto" />
+	</header>
 
-	<div class="container">
-		<div class="center" align="center">
-			<h1 class="display-4">Lista de Locações</h1>
+	<main>
+		<div class="container">
+			<div class="center" align="center">
+				<h1 class="display-4">Lista de Locações</h1>
+			</div>
+
+			<div>
+				<table class="table table-hover table-bordered table-sm">
+					<thead class="thead-dark">
+						<tr align="center">
+							<th scope="col">Id</th>
+							<th scope="col">R$ Total</th>
+							<th scope="col">Data de Locação</th>
+							<th scope="col">Data de Devolução</th>
+							<th scope="col">Carro</th>
+							<th scope="col">Motorista</th>
+							<th scope="col">Ação</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr th:each="locacao : ${locacoes}">
+							<td align="center" th:text="${locacao.id}"></td>
+							<td align="right" th:text="${#numbers.formatDecimal(locacao.valorTotal,0,'POINT',2,'COMMA')}"></td>
+							<td align="center" th:text="${#temporals.format(locacao.dataDeLocacao,'dd/MM/yyyy')}"></td>
+							<td align="center" th:text="${#temporals.format(locacao.dataDeDevolucao,'dd/MM/yyyy')}"></td>
+							<td align="center" th:text="${locacao.carro.modelo.descricao}"></td>
+							<td align="center" th:text="${locacao.motorista.nome}"></td>
+							<td align="center"><a class="btn btn-primary btn-sm"
+								th:href="@{locacoes/editar/{id}(id=${locacao.id})}">Editar</a>
+								<a class="btn btn-danger btn-sm"
+								th:href="@{locacoes/excluir/{id}(id=${locacao.id})}">Excluir</a>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
 		</div>
-
-		<div>
-			<table class="table table-hover table-bordered table-sm">
-				<thead class="thead-dark">
-					<tr align="center">
-						<th scope="col">Id</th>
-						<th scope="col">R$ Total</th>
-						<th scope="col">Data de Locação</th>
-						<th scope="col">Data de Devolução</th>
-						<th scope="col">Carro</th>
-						<th scope="col">Motorista</th>
-						<th scope="col">Ação</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr th:each="locacao : ${locacoes}">
-						<td align="center" th:text="${locacao.id}"></td>
-						<td align="right" th:text="${#numbers.formatDecimal(locacao.valorTotal,0,'POINT',2,'COMMA')}"></td>
-						<td align="center" th:text="${#temporals.format(locacao.dataDeLocacao,'dd/MM/yyyy')}"></td>
-						<td align="center" th:text="${#temporals.format(locacao.dataDeDevolucao,'dd/MM/yyyy')}"></td>
-						<td align="center" th:text="${locacao.carro.modelo.descricao}"></td>
-						<td align="center" th:text="${locacao.motorista.nome}"></td>
-						<td align="center"><a class="btn btn-primary btn-sm"
-							th:href="@{locacoes/editar/{id}(id=${locacao.id})}">Editar</a>
-							<a class="btn btn-danger btn-sm"
-							th:href="@{locacoes/excluir/{id}(id=${locacao.id})}">Excluir</a>
-						</td>
-					</tr>
-				</tbody>
-			</table>
-		</div>
-	</div>
+	</main>
 	<div class="footer mt-auto py-3" align="center">
 		<div class="container" th:replace="fragments/footer :: footer" />
 	</div>
