--- a/src/main/resources/templates/fragments/modal.html
+++ b/src/main/resources/templates/fragments/modal.html
@@ -1,19 +1,16 @@
-<div id="myModal" class="modal fade" style="display: none;">
-	<div class="modal-dialog modal-confirm">
+<div id="excluirModal" class="modal fade" tabindex="-1" role="dialog">
+	<div class="modal-dialog" role="document">
 		<div class="modal-content">
-			<div class="modal-header">
-				<div class="icon-box">
-					<i class="material-icons"></i>
-				</div>				
-				<h4 class="modal-title">Are you sure?</h4>	
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+			<div class="modal-header">				
+				<h4 class="modal-title">Excluir</h4>	
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 			</div>
 			<div class="modal-body">
-				<p>Do you really want to delete these records? This process cannot be undone.</p>
+				<p>Deseja realmente excluir este item ?</p>
 			</div>
 			<div class="modal-footer">
-				<button type="button" class="btn btn-info" data-dismiss="modal">Cancel</button>
-				<button type="button" class="btn btn-danger">Delete</button>
+				<button type="button" class="btn btn-info" data-dismiss="modal">Cancelar</button>
+				<button type="button" class="btn btn-danger modal-confirm" >Confirmar</button>
 			</div>
 		</div>
 	</div>
